# waste_sorting_trashnet

./: .gitignore  README.md  app.py  command_cheat_sheet.md  gui.py  load_and_use_model.py  main.py  pyproject.toml  test_project.py
models/: confusion_matrix.csv  report.json
notebooks/: waste_sorting_demo.ipynb
src/data/: check_dataset.py  check_split.py  prepare_dataset.py
src/models/: classifier.py  train_model.py  tta_predict.py
